--- a/rapport/src/1_introduction/introduction.tex
+++ b/rapport/src/1_introduction/introduction.tex
@@ -1,4 +1,5 @@
 \section{Introduction}
 
   \subsection{Présentation du projet}
-    L'objectif de ce projet est de développer un Idle game. Le sous thème est un Gacha Game.
+
+    L'objectif de ce projet est de développer un Idle game et de se familiariser avec les technologies vues durant le cours de Technologie Web 2. Ce sera un jeu de Gacha. Ce type de jeu est assez addictif et se base sur l'obtention aléatoire de loot ce qui pousse les joueurs à continuer afin d'en débloquer toujours plus. Nous allons notamment utiliser Node.js et Express.js par exemple, et la base de données sera en SQLite.
