--- a/rapport/src/2_specification/4_roles.tex
+++ b/rapport/src/2_specification/4_roles.tex
@@ -1,5 +1,21 @@
-\inputencoding{utf8}
+\subsection{Specifications des rôles}
 
-\section{Etape 1 : Modéliser, définir le problème formel, associer une classe de complexité}
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=0.8\textwidth]{images/utilisation1.eps}
+        \caption{Diagramme à l'écran titre pour un visiteur}
+    \end{figure}
 
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=1\textwidth]{images/utilisation2.eps}
+        \caption{Diagramme pendant le jeu pour un utilisateur}
+    \end{figure}
 
+    \newpage
+
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=1\textwidth]{images/utilisation3.eps}
+        \caption{Diagramme pour un administrateur}
+    \end{figure}
