Reste à mettre la BD au propre et relire

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -9,7 +9,7 @@
 \usepackage{float}
 \usepackage{placeins}
 
-\author{RJ-MH}
+\author{ADC-NE-MH-RJ}
 
 \setlength{\headheight}{28pt}
 
@@ -53,7 +53,6 @@ Ambre \textsc{De crescenzo}\\
 Nils \textsc{Etien}\\
 Maxime \textsc{Huyenh}\\% noms
 Ryan \textsc{Juteau}\\
-
 }
 {TW2 - ITI4 - 2022} % bas de page
 
