--- a/rapport/src/2_specification/3_operationnelles.tex
+++ b/rapport/src/2_specification/3_operationnelles.tex
@@ -1,1 +1,13 @@
 \subsection{Specifications opérationnelles}
+
+    \subsection{Performances}
+
+        Le jeu doit répondre à un minimum de réactivité. En effet, il ne doit pas avoir de temps de chargement long au vue de sa simplicité.
+
+    \subsection{Sécurité}
+
+        Le mot de passe envoyé par l'utilisateur doit être correctement chiffré afin qu'aucun pirate ne puisse le décoder en cas d'interception.
+
+    \subsection{Ergonomie et intéractivité}
+
+        Idéalement les pages web devront avoir de la cohérence visuelle avec des codes couleurs et une charte graphique bien établie. L'utilisateur  pourra se déplacer dans l'interface au clavier ou intéragir à la souris.
