--- a/rapport/src/2_specification/4_roles.tex
+++ b/rapport/src/2_specification/4_roles.tex
@@ -1,6 +1,6 @@
 \subsection{Specifications des rôles}
 
-    \begin{figure}[ht!]
+    \begin{figure}[h!]
         \centering
             \includegraphics[width=0.8\textwidth]{images/utilisation1.eps}
         \caption{Diagramme à l'écran titre pour un visiteur}
