--- a/rapport/src/3_conception/2_navigation.tex
+++ b/rapport/src/3_conception/2_navigation.tex
@@ -1,1 +1,7 @@
 \subsection{Diagramme de navigation}
+
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=1\textwidth]{images/diagramme_de_navigation.png}
+        \caption{Diagramme de navigation}
+    \end{figure}
