--- a/rapport/src/3_conception/3_classes.tex
+++ b/rapport/src/3_conception/3_classes.tex
@@ -1,1 +1,7 @@
 \subsection{Diagrammes de classes}
+
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=1\textwidth]{images/Diagramme_de_classe_TW2_V4.png}
+        \caption{Diagramme de navigation}
+    \end{figure}
