quasi fini le rapport

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -47,12 +47,13 @@
 \PageDeGarde
 {couverture.jpeg} % image sur la page de garde
 {Projet TW2} % titre principal
-{Idle Game :} % sous-titre
+{Idle Game : Stickman Impact} % sous-titre
 {
 Ambre \textsc{De crescenzo}\\
 Nils \textsc{Etien}\\
 Maxime \textsc{Huyenh}\\% noms
 Ryan \textsc{Juteau}\\
+Loïck \textsc{Toupin}\\
 }
 {TW2 - ITI4 - 2022} % bas de page
 
