--- a/rapport/src/2_specification/1_fonctionnelle.tex
+++ b/rapport/src/2_specification/1_fonctionnelle.tex
@@ -44,7 +44,7 @@
 
 
         \begin{itemize}
-            \item Guide” où le joueur peut voir des détails sur les héros, les armes (voir ci-après), les invocations, etc etc…
+            \item Guide où le joueur peut voir des détails sur les héros, les armes (voir ci-après), les invocations, etc etc…
 
             \item Edition d’un compte : L’utilisateur peut changer son mot de passe et son adresse mail dans le menu des Options du jeu (après connexion).
 
