--- a/rapport/src/3_conception/3_classes.tex
+++ b/rapport/src/3_conception/3_classes.tex
@@ -3,5 +3,5 @@
     \begin{figure}[ht!]
         \centering
             \includegraphics[width=1\textwidth]{images/Diagramme_de_classe_TW2_V4.png}
-        \caption{Diagramme de navigation}
+        \caption{Diagramme de classes}
     \end{figure}
