--- a/rapport/src/3_conception/4_BD.tex
+++ b/rapport/src/3_conception/4_BD.tex
@@ -1,1 +1,7 @@
 \subsection{Représentation logique de la base de données}
+
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=1\textwidth]{images/bd.png}
+        \caption{Représentation de la base de donnée}
+    \end{figure}
